<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/llFolderTitle"
        android:background="@color/transparent_white_dark">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/tvFolderName"
            android:fontFamily="@string/font_family_text_medium"
            android:textSize="18sp"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="15dp"
            android:textColor="@color/white" />

        <ProgressBar
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="15dp"
            android:id="@+id/pbLoading"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="0dp"
        android:padding="10dp">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/svSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:queryHint="@string/search_hint"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvEmptyList"
                android:textSize="@dimen/text_big_size"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:text="@string/empty_list"
                android:fontFamily="@string/font_family_text"
                android:visibility="invisible"/>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/lvAppList">

            </ListView>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>