<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.MainActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/tool_bar_height"
            app:theme="@style/AppDefaultTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:title="@string/folders"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppDefaultTheme.PopupOverlay">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvMgrService"
                        android:layout_gravity="end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        app:cardBackgroundColor="@color/neutral"
                        app:contentPadding="5dp"
                        app:cardCornerRadius="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvTextButton"
                            android:textColor="@color/white"
                            android:padding="4dp"
                            android:text="@string/start_service"
                            android:textSize="@dimen/text_short_size_dp"
                            android:fontFamily="@string/font_family_text"
                            android:textStyle="bold"
                            android:layout_gravity="center"/>

                    </androidx.cardview.widget.CardView>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/srlRefresh">

            <GridView
                android:id="@+id/gvFolders"
                android:numColumns="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tool_bar_height"
        android:id="@+id/tvEmptyList"
        android:textSize="@dimen/text_big_size"
        android:layout_gravity="center"
        android:text="@string/empty_list"
        android:fontFamily="@string/font_family_text"
        android:visibility="invisible"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbAddFolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        app:srcCompat="@drawable/ic_baseline_add_24"
        app:backgroundTint="@color/floating_button_color"
        app:fabSize="mini"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>